# langgraph-task-orchestrator

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  integration-tests.yml  ragas-quality-gate.yml
.streamlit/: config.toml  secrets.toml.example
agents/: analytics.py  critique.py  hitl.py  planner.py  research.py  state.py  supervisor.py  test_state.py
api/: main.py
core/: llm_client.py  mlflow_tracker.py  observability.py  retriever.py
data/: ingest_sec_filings.py
docs/: architecture.md
evaluation/: ragas_eval.py  test_deepeval.py
graph/: agent_graph.py
scripts/: README.md  create_demo_video.py  create_narrated_video.py  generate_demo_gif.py
tests/: test_analytics.py  test_critique.py  test_graph.py  test_llm_client.py  test_planner.py  test_real_data.py  test_research.py  test_state.py
tests/integration/: test_analytics_integration.py  test_planner_integration.py
tools/: retrieval_tool.py
ui/: app.py
